# foodiespot-chatbot

./: .env.example  ChatbotFunctions.py  README.md  chatbot.py  chatbot_utils.py  main.py  pyproject.toml
data/: reservations_data.json  restaurants_data.json
threads/: 664155ac-a1a3-4a6c-b049-8afdea23340c.json  92b1d324-2b51-4df8-abd2-f2cfca04ca60.json  ce55b873-c43a-4339-ae31-a0c9de1bfa3c.json
